PP-8125 Worldpay - Get credentials by payment provider
- Get Worldpay credentials based on payment provider name for all operations